# scmcoat

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yaml
src/scmcoat/: __init__.py  core.py  types.py  utils.py
src/scmcoat/climateparams_data/: fair-1.6.2-wg3-params-common.json  fair-1.6.2-wg3-params-slim.json
src/scmcoat/core/: fair.py
src/scmcoat/testdata/: rcp45emissions.csv
tests/: test_fair.py
