[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scmcoat"
version = "0.0.1"
authors = [
  { name="Kelly McCusker", email="kellymccusker@gmail.com" },
]
description = "Wraps FaIR simple climate model with specific settings for use across projects"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kemccusker/scmcoat"
"Bug Tracker" = "https://github.com/kemccusker/scmcoat/issues"
