[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "scmcoat"
authors = [
  { name="Kelly McCusker", email="kellymccusker@gmail.com" },
]
description = "Wraps FaIR simple climate model with specific settings for use across projects"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fair~=1.6.4",
    "numpy",
    "pandas",
    "xarray",
]

[project.urls]
"Homepage" = "https://github.com/kemccusker/scmcoat"
"Bug Tracker" = "https://github.com/kemccusker/scmcoat/issues"


[tool.hatch.version]
source = "vcs"
fallback-version = "999"
